<resources>
    <string name="app_name">teste02</string>
    <string name="novo_sal_rio_r_0_00">Novo salário: R$ 0,00</string>
    <string name="calcular_novo_sal_rio">Calcular Novo Salário</string>
    <string name="aumento_de_50">Aumento de 50%</string>
    <string name="aumento_de_45">Aumento de 45%</string>
    <string name="aumento_de_40">Aumento de 40%</string>
    <string name="digite_o_sal_rio">Digite o salário</string>
</resources>