<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/et_salario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digite_o_sal_rio"
        android:inputType="numberDecimal" />

    <RadioGroup
        android:id="@+id/rg_aumento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp">

        <RadioButton
            android:id="@+id/rb_40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aumento_de_40" />

        <RadioButton
            android:id="@+id/rb_45"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aumento_de_45" />

        <RadioButton
            android:id="@+id/rb_50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aumento_de_50" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcular_novo_sal_rio"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/tv_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/novo_sal_rio_r_0_00"
        android:textSize="18sp"
        android:layout_marginTop="16dp" />
</LinearLayout>